--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,17 +36,19 @@
         android:layout_height="68dp"
         android:layout_marginTop="81dp"
         android:layout_marginBottom="21dp"
+        android:onClick="calcular"
         android:text="calcular"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_Resultado"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.346"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <TextView
         android:id="@+id/tv_Resultado"
-        android:layout_width="139dp"
-        android:layout_height="46dp"
+        android:layout_width="124dp"
+        android:layout_height="43dp"
         android:layout_marginStart="136dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="136dp"
@@ -55,6 +57,7 @@
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -97,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Siguiente"
-        tools:layout_editor_absoluteX="281dp"
-        tools:layout_editor_absoluteY="496dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
